# MLroof

./: README.md  pyproject.toml
roof_area/: __init__.py  __main__.py  cli.py  config.py  logging.py
roof_area/io/: raster.py  vector.py
roof_area/metrics/: __init__.py  area.py  eval.py  quality.py
roof_area/model/: infer.py
roof_area/pipeline/: run.py
roof_area/preprocess/: tiling.py
tests/: test_edge_confidence.py  test_infer.py  test_quality_flag_shadow.py  test_raster.py  test_readme_examples.py  test_shadow_score.py  test_tiling.py  test_vector_and_pipeline.py
